examples/index.css
html, body {
    background-color: black;
    overflow: overlay;
    color: aliceblue;
    margin: 0;
    font-size: 16px;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {-webkit-appearance: none; margin: 0;}input[type="number"] {-moz-appearance: textfield;}
input[type="password"]::-ms-reveal,input[type="password"]::-ms-clear,input[type="password"]::-webkit-credentials-auto-fill-button,input[type="password"]::-webkit-password-reveal-button {display:none !important;}
*::-webkit-scrollbar {width: 5px;}

.sections {
    width: 100%;
    height: 85%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.section {
    width: 48%;
    height: 100%;
    background-color: #181818;
    border: 2px solid rgb(36, 36, 36);
    overflow: overlay;
}

.settings {
    height: 15%;
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
}

#showGeneratedText {
    padding: 20px;
    height: 100%;
    width: 200%;
    background-color: transparent;
    color: aliceblue;
    outline: none;
    border: none;
    font-family: monospace;

    letter-spacing: 0px;
    line-height: 18px;
}

.smallInput {
    width: 20px;
    text-align: end;
    outline: none;
}
    

.blockSetting {
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.tip {
    width: 100%;
}

.settingValuePreview {
    width: 80px;
}

.charsInputParent {
    display: flex;
    flex-direction: column;
    align-items: center;
}

